testsuite/tests/misc/diag_file_end/test.out
== test.lkt ==
test.lkt:7:1: error: Expected '}', got Termination

lkt_compile: Done
